--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 body {
-  margin: 0;
-  text-align: center;
-  font-family: Arial;
-  user-select: none;
-  background: #333;
+	margin: 0 auto;
+	font-family: Arial;
+	user-select: none;
+	background: #333;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+}
+
+canvas {
+	border: 3px solid #242526;
 }
