--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 	color: #fff;
 }
 
-#commands {
+#controls {
 	padding: 6rem;
 	background-color: rgba(0, 0, 0, 0.6);
 	color: white;
@@ -32,7 +32,7 @@ body {
 
 .hide {
 	opacity: 0;
-	transition: 0.3s;
+	transition: 0.5s ease;
 }
 
 h1 {
